Fix button alignment

--- a/src/App.css
+++ b/src/App.css
@@ -48,5 +48,6 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   margin: auto;
 }
